Fix Cupertino modal spacing

--- a/src/layouts/cupertino-dialog.scss
+++ b/src/layouts/cupertino-dialog.scss
@@ -217,8 +217,7 @@ body:is(.layout-cupertino, .layout-macos):not(.mobile-stable).is-phone {
 
     .modal-button-container {
       gap: 8px;
-      margin-bottom: 0;
-      padding: var(--safe-area-inset-side);
+      padding: 16px var(--safe-area-inset-side) 0;
     }
     .modal-button-container button {
       margin-top: 0;
